# Ditto

./: .gitignore  CMakeLists.txt  README.md
DSGen/: README.md
configs/: README.md  dsq1.txt  dsq16.txt  dsq94.txt  dsq95.txt  netconfig.txt  setting-norm-0.8.txt  setting-norm-1.0.txt  setting-uni-100.txt  setting-uni-25.txt  setting-uni-50.txt  setting-uni-75.txt  setting-zipf-0.9.txt  setting-zipf-0.99.txt  setting.txt
configs/configs-1t/: dsq1.txt  dsq16.txt  dsq94.txt  dsq95.txt  netconfig.txt  setting-norm-0.8.txt  setting-norm-1.0.txt  setting-uni-100.txt  setting-uni-25.txt  setting-uni-50.txt  setting-uni-75.txt  setting-zipf-0.9.txt  setting-zipf-0.99.txt  setting.txt
data-processing/: README.md  preprocess.sh  splitter.cpp  update_redis.sh  upload_redis.sh  upload_s3.sh  uploader.cpp
include/: README.md  aws_inc.hpp  io.hpp  net.hpp  operator.hpp  query.hpp  r_array.hpp  scheduler.hpp  schema.hpp  sh_array.hpp  shtable.hpp  spright_inc.hpp  table.hpp  task.hpp  utils.hpp
profiles/: README.md
profiles/redis/: q16_stage1.profile  q16_stage2.profile  q16_stage3.profile  q16_stage4.profile  q16_stage5.profile  q16_stage6.profile  q16_stage7.profile  q16_stage8.profile  q16_stage9.profile  q1_stage1.profile  q1_stage2.profile  q1_stage3.profile  q1_stage4.profile  q1_stage5.profile  q1_stage6.profile  q1_stage7.profile  q1_stage8.profile  q1_stage9.profile  q94_stage1.profile  (+17 more)
profiles/redis-100g/: q16_stage1.profile  q16_stage2.profile  q16_stage3.profile  q16_stage4.profile  q16_stage5.profile  q16_stage6.profile  q16_stage7.profile  q16_stage8.profile  q16_stage9.profile  q1_stage1.profile  q1_stage10.profile  q1_stage2.profile  q1_stage3.profile  q1_stage4.profile  q1_stage5.profile  q1_stage6.profile  q1_stage7.profile  q1_stage8.profile  q1_stage9.profile  q94_stage1.profile  q94_stage2.profile  q94_stage3.profile  q94_stage4.profile  q94_stage5.profile  q94_stage6.profile  q94_stage7.profile  q94_stage8.profile  q94_stage9.profile  q95_stage1.profile  q95_stage2.profile  q95_stage3.profile  q95_stage4.profile  q95_stage5.profile  q95_stage6.profile  q95_stage7.profile  q95_stage8.profile  q95_stage9.profile
python/: README.md  fig10.py  fig11.py  fig12.py  fig14.py  fig15.py  fig8.py  fig9.py
scripts/: README.md  aws_sdk_install.sh  breakdown.sh  build.sh  clean.sh  dpdk_install.sh  expr.sh  glog_install.sh  redis_install.sh  run.sh  setup.sh  tpcds_gen.sh
src/: README.md  executor.cpp  operator.cpp  query.cpp  scheduler.cpp  shm_mgr.cpp  spright_wrapper.cpp
(+74 files in other folders)
